temporary added the core EF project as a project reference

--- a/Facilis.UsersManagement/Facilis.UsersManagement.Tests/Facilis.UsersManagement.Tests.csproj
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.Tests/Facilis.UsersManagement.Tests.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="coverlet.collector" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Facilis.Core\Facilis.Core\Facilis.Core.EntityFrameworkCore\Facilis.Core.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\Facilis.UsersManagement\Facilis.UsersManagement.csproj" />
+  </ItemGroup>
+
 </Project>
