--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Facilis.UsersManagement.SampleApp.csproj
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Facilis.UsersManagement.SampleApp.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Facilis.Core\Facilis.Core\Facilis.Core.EntityFrameworkCore\Facilis.Core.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Facilis.UsersManagement\Facilis.UsersManagement.csproj" />
   </ItemGroup>
