--- a/Facilis.UsersManagement/Facilis.UsersManagement/Facilis.UsersManagement.csproj
+++ b/Facilis.UsersManagement/Facilis.UsersManagement/Facilis.UsersManagement.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
