--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Facilis.UsersManagement.SampleApp.csproj
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Facilis.UsersManagement.SampleApp.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FirebaseAdmin" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
