--- a/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Properties/launchSettings.json
+++ b/Facilis.UsersManagement/Facilis.UsersManagement.SampleApp/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -10,12 +10,13 @@
   "profiles": {
     "Facilis.UsersManagement.SampleApp": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7133;http://localhost:5133",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "GOOGLE_APPLICATION_CREDENTIALS": "sampleapp-f7318-firebase-adminsdk-v9m13-e73fb13baf.json"
+      },
+      "applicationUrl": "https://localhost:7133;http://localhost:5133",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
